# dm_logger

./: CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  Makefile  dm_logger.vala  dm_logreader.vala  libdm_logger.pc.in  preprocess_logger.pl  test.vala
tests/: CMakeLists.txt  test_dm_logger.vala
